# VulnGuard

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all.sh  setup_rocm.sh
data/cache/: synth.parquet
docs/: REVIEWER_MAP.md  THREATS.md
results/: ablation.json  adaptive_calibration.json  adversarial.json  adversarial_full.json  cost_curves.json  cross_project.json  devign_diagnostic.json  diagnostic.json  explain.json  probe_threshold.json  simple_baselines_crossproj.json  simple_baselines_random.json  sota.json  threshold_transfer_full.json  threshold_transfer_quick.json  transfer_prediction.json  weight_sweep.json
scripts/: 00_prepare_data.py  01_baseline_diagnostic.py  02_ablation.py  03_cross_project.py  04_sota_baselines.py  05_adversarial.py  06_weight_sweep.py  07_explainability.py  10_threshold_transfer_full.py  11_cost_curves.py  12_adversarial_counterfactual.py  13_adaptive_calibration.py  14_simple_baselines.py  15_transfer_prediction.py  generate_extra_figures.py  generate_figures.py  probe_threshold_transfer.py
src/vulnguard/: __init__.py
src/vulnguard/data/: loaders.py  preprocess.py
src/vulnguard/eval/: adversarial.py  explain.py  metrics.py
src/vulnguard/models/: factory.py  losses.py
src/vulnguard/train/: trainer.py
src/vulnguard/utils/: __init__.py  common.py
tests/: test_pipeline.py
