[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnguard"
version = "0.2.0"
description = "VulnGuard revision experiments: fair baselines, ablation, cross-project, adversarial, explainability"
requires-python = ">=3.9"
dependencies = [
  "transformers>=4.40",
  "datasets>=2.18",
  "scikit-learn>=1.3",
  "pandas>=2.0",
  "numpy>=1.24",
  "pyarrow>=14",
  "scipy>=1.10",
  "tqdm>=4.66",
]

[project.optional-dependencies]
explain = ["captum>=0.7"]
adversarial = ["tree-sitter>=0.21", "tree-sitter-languages>=1.10"]

[tool.setuptools.packages.find]
where = ["src"]
